# tachyon

./: .bazelignore  .bazelrc  .clang-format  .dockerignore  .gitignore  .gitmessage  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.Bazel.lock.json  Cargo.toml  Dockerfile  Dockerfile.base.jammy  Dockerfile.halo2.jammy  LICENSE  LICENSE-APACHE.EF  LICENSE-APACHE.stwo  LICENSE-MIT.EF  LICENSE-MIT.cuzk  LICENSE-MIT.era-bellman-cuda  LICENSE-MIT.halo2  LICENSE-MIT.plonky3  LICENSE-MIT.scroll  LICENSE.lambdaworks  LICENSE.ulvetanna  README.md  WORKSPACE  funding.json  nginx.conf
benchmark/: BUILD.bazel  README.md  config.cc  config.h  ec_double_benchmark.cu.cc  field_type.h  msm_benchmark.cu.cc  plot_example.cc  simple_benchmark_reporter.cc  simple_benchmark_reporter.h  simple_reporter.cc  simple_reporter.h  test.cc  vendor.h
benchmark/ec/: BUILD.bazel  ec_config.cc  ec_config.h  ec_double_benchmark.cu.cc  ec_double_benchmark_gpu.cc  ec_util.cc  ec_util.h  simple_ec_benchmark_reporter.cc  simple_ec_benchmark_reporter.h
benchmark/fft/: BUILD.bazel  README.md  fft_benchmark.cc  fft_benchmark_gpu.cc  fft_config.cc  fft_config.h  fft_runner.h  simple_fft_benchmark_reporter.cc  simple_fft_benchmark_reporter.h
benchmark/fft/arkworks/: BUILD.bazel  Cargo.toml
benchmark/fft/bellman/: BUILD.bazel  Cargo.toml
benchmark/fft/halo2/: BUILD.bazel  Cargo.toml
benchmark/fft_batch/: BUILD.bazel  README.md  benchmark.cc  benchmark_reporter.cc  benchmark_reporter.h  benchmark_runner.h  config.cc  config.h  fft_batch_benchmark.cc  fft_batch_config.cc  fft_batch_config.h  fft_batch_runner.h
benchmark/fft_batch/plonky3/: BUILD.bazel  Cargo.toml
benchmark/fri/: BUILD.bazel  README.md  fri_benchmark.cc  fri_config.cc  fri_config.h  fri_runner.h
benchmark/fri/plonky3/: BUILD.bazel  Cargo.toml
benchmark/msm/: BUILD.bazel  README.md  msm_benchmark.cc  msm_benchmark.cu.cc  msm_benchmark_gpu.cc  msm_config.cc  msm_config.h  msm_runner.h  simple_msm_benchmark_reporter.cc  simple_msm_benchmark_reporter.h
benchmark/msm/arkworks/: BUILD.bazel  Cargo.toml
benchmark/msm/bellman/: BUILD.bazel  Cargo.toml
benchmark/msm/halo2/: BUILD.bazel  Cargo.toml
benchmark/poseidon/: BUILD.bazel  README.md  poseidon_benchmark.cc  poseidon_benchmark_config.h  poseidon_benchmark_runner.h  poseidon_config.cc  poseidon_config.h  simple_poseidon_benchmark_reporter.cc  simple_poseidon_benchmark_reporter.h
benchmark/poseidon/arkworks/: BUILD.bazel  Cargo.toml
benchmark/poseidon2/: BUILD.bazel  README.md  poseidon2_benchmark.cc  poseidon2_benchmark_runner.h  poseidon2_config.cc  poseidon2_config.h
benchmark/poseidon2/horizen/: BUILD.bazel  Cargo.toml
benchmark/poseidon2/plonky3/: BUILD.bazel  Cargo.toml
docs/doxygen/: BUILD.bazel  Doxyfile.in  main_page.md
tachyon/: BUILD.bazel  export.h  version.cc  version.h  version_unittest.cc
tachyon/base/: BUILD.bazel  array_to_vector.h  auto_reset.h  auto_reset_unittest.cc  bit_cast.h  bit_cast_unittest.cc  bits.cc  bits.h  bits_unittest.cc  callback.h  compiler_specific.h  cxx20_is_constant_evaluated.h  cxx20_is_constant_evaluated_unittest.cc  endian.cc  endian.h  endian_utils.h  endian_utils_unittest.cc  environment.h  environment_posix.cc  environment_unittest.cc  functor_traits.h  immediate_crash.h  logging.cc  logging.h  macro_utils.h  macro_utils_unittest.cc  maybe_owned.h  maybe_owned_traits.h  no_destructor.h  openmp_util.h  optional.h  parallelize.h  parallelize_unittest.cc  profiler.cc  profiler.h  random.cc  random.h  random_unittest.cc  range.h  range_unittest.cc  (+9 more)
tachyon/base/apple/: .clang-format  BUILD.bazel  bridging.h  bundle_locations.h  bundle_locations.mm
tachyon/base/binding/: BUILD.bazel  callable_util.h  cpp_constructor.cc  cpp_constructor.h  cpp_constructor_matcher.cc  cpp_constructor_matcher.h  cpp_raw_ptr.h  cpp_shared_ptr.h  cpp_stack_value.h  cpp_type.h  cpp_type_names.cc  cpp_type_names.h  cpp_unique_ptr.h  cpp_value.cc  cpp_value.h  cpp_value_factory.h  holder_util.h  property_util.h
tachyon/base/buffer/: BUILD.bazel  buffer.cc  buffer.h  buffer_unittest.cc  copyable.h  copyable_forward.h  endian_auto_reset.h  read_only_buffer.cc  read_only_buffer.h  string_buffer.h  vector_buffer.cc  vector_buffer.h
tachyon/base/color/: BUILD.bazel  color.cc  color.h  color_conversions.cc  color_conversions.h  color_conversions_unittest.cc  color_unittest.cc  named_color.h
tachyon/base/console/: BUILD.bazel  console.cc  console.h  console_stream.cc  console_stream.h  iostream.cc  iostream.h  sgr_parameter_list.h  sgr_parameters.cc  sgr_parameters.h  table_writer.cc  table_writer.h
tachyon/base/containers/: BUILD.bazel  adapters.h  adapters_unittest.cc  chunked_iterator.h  circular_deque.h  circular_deque_unittest.cc  container_util.h  container_util_unittest.cc  contains.h  contains_unittest.cc  cxx20_erase.h  cxx20_erase_deque.h  cxx20_erase_forward_list.h  cxx20_erase_internal.h  cxx20_erase_list.h  cxx20_erase_map.h  cxx20_erase_set.h  cxx20_erase_string.h  cxx20_erase_unordered_map.h  cxx20_erase_unordered_set.h  cxx20_erase_vector.h  stack.h  util.h  vector_buffer.h  vector_buffer_unittest.cc  zipped_iterator.h
tachyon/c/: BUILD.bazel  api.h  export.h  version.bzl  version.cc  version.h  version_unittest.cc
tachyon/cc/: BUILD.bazel  api.h  export.h  version.bzl  version.cc  version.h  version_unittest.cc
tachyon/device/: BUILD.bazel  allocator.cc  allocator.h  allocator_registry.cc  allocator_registry.h  numa.cc  numa.h  numa_unittest.cc  tracking_allocator.cc  tracking_allocator.h
tachyon/examples/: BUILD.bazel  cuda_example.cu.cc  version.cc
tachyon/node/: BUILD.bazel  tachyon.cc
tachyon/py/: BUILD.bazel  tachyon.cc
tachyon/rs/: BUILD.bazel  Cargo.toml
tachyon/zk/: BUILD.bazel  value.h  value_unittest.cc
vendors/circom/: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  build_defs.bzl  circom.BUILD  prover_main.cc
vendors/halo2/: BUILD.bazel  Cargo.toml  README.md  build.rs  lib.rs
vendors/plonky3/: BUILD.bazel  Cargo.toml
vendors/sp1/: BUILD.bazel  Cargo.toml
(+2501 files in other folders)
