[workspace]
members = [
    "benchmark/msm/arkworks",
    "benchmark/msm/bellman",
    "benchmark/msm/halo2",
    "benchmark/fft/arkworks",
    "benchmark/fft/bellman",
    "benchmark/fft/halo2",
    "benchmark/poseidon/arkworks",
    "benchmark/poseidon2/horizen",
    "benchmark/poseidon2/plonky3",
    "tachyon/rs",
    "vendors/halo2",
]
