[workspace]
members = [
    "benchmark/msm/arkworks",
    "benchmark/msm/bellman",
    "benchmark/msm/halo2",
    "benchmark/fft/arkworks",
    "benchmark/fft/bellman",
    "benchmark/fft/halo2",
    "benchmark/fft_batch/plonky3",
    "benchmark/fri/plonky3",
    "benchmark/poseidon/arkworks",
    "benchmark/poseidon2/horizen",
    "benchmark/poseidon2/plonky3",
    "tachyon/rs",
    "vendors/scroll_halo2",
    "vendors/plonky3",
    "vendors/sp1",
]
