load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_cuda_binary")

tachyon_cc_library(
    name = "ec_config",
    srcs = ["ec_config.cc"],
    hdrs = ["ec_config.h"],
    deps = [
        "//tachyon/base/console",
        "//tachyon/base/flag:flag_parser",
    ],
)

tachyon_cc_library(
    name = "simple_ec_benchmark_reporter",
    srcs = ["simple_ec_benchmark_reporter.cc"],
    hdrs = ["simple_ec_benchmark_reporter.h"],
    visibility = ["//benchmark:__subpackages__"],
    deps = [
        "//benchmark:simple_benchmark_reporter",
        "//tachyon/base/containers:container_util",
        "//tachyon/base/strings:string_number_conversions",
    ],
)

tachyon_cuda_binary(
    name = "ec_double_benchmark_gpu",
    testonly = True,
    srcs = ["ec_double_benchmark_gpu.cc"],
    deps = [
        ":ec_config",
        ":simple_ec_benchmark_reporter",
        "//tachyon/base/time:time_interval",
        "//tachyon/device/gpu:gpu_memory",
        "//tachyon/math/elliptic_curves/bn/bn254:g1_gpu",
        "//tachyon/math/elliptic_curves/short_weierstrass/kernels:elliptic_curve_ops",
        "//tachyon/math/elliptic_curves/test:random",
    ],
)
