load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_cuda_binary")

tachyon_cc_library(
    name = "ec_config",
    srcs = ["ec_config.cc"],
    hdrs = ["ec_config.h"],
    deps = [
        "//benchmark:config",
        "//tachyon/base/ranges:algorithm",
    ],
)

tachyon_cuda_binary(
    name = "ec_double_benchmark_gpu",
    testonly = True,
    srcs = ["ec_double_benchmark_gpu.cc"],
    deps = [
        ":ec_config",
        "//benchmark:simple_reporter",
        "//tachyon/base/time:time_interval",
        "//tachyon/device/gpu:gpu_memory",
        "//tachyon/math/elliptic_curves/bn/bn254:g1_gpu",
        "//tachyon/math/elliptic_curves/short_weierstrass/kernels:elliptic_curve_ops",
        "//tachyon/math/elliptic_curves/test:random",
    ],
)
