load(
    "//bazel:tachyon_cc.bzl",
    "tachyon_cc_binary",
    "tachyon_cc_library",
    "tachyon_cuda_binary",
)

tachyon_cc_library(
    name = "msm_config",
    testonly = True,
    srcs = ["msm_config.cc"],
    hdrs = ["msm_config.h"],
    deps = [
        "//tachyon/base/console",
        "//tachyon/base/containers:container_util",
        "//tachyon/base/flag:flag_parser",
        "//tachyon/base/ranges:algorithm",
        "//tachyon/math/elliptic_curves/msm/test:variable_base_msm_test_set",
    ],
)

tachyon_cc_library(
    name = "msm_runner",
    hdrs = ["msm_runner.h"],
    deps = [
        ":simple_msm_benchmark_reporter",
        "//tachyon/base/time",
        "//tachyon/cc/math/elliptic_curves:point_traits_forward",
    ],
)

tachyon_cc_library(
    name = "simple_msm_benchmark_reporter",
    srcs = ["simple_msm_benchmark_reporter.cc"],
    hdrs = ["simple_msm_benchmark_reporter.h"],
    deps = [
        "//benchmark:simple_benchmark_reporter",
        "//tachyon/base/containers:container_util",
        "//tachyon/base/strings:string_number_conversions",
    ],
)

tachyon_cc_binary(
    name = "msm_benchmark",
    testonly = True,
    srcs = ["msm_benchmark.cc"],
    deps = [
        ":msm_config",
        ":msm_runner",
        "//benchmark/msm/arkworks",
        "//benchmark/msm/bellman",
        "//benchmark/msm/halo2",
        "//tachyon/c/math/elliptic_curves/bn/bn254:msm",
    ],
)

tachyon_cuda_binary(
    name = "msm_benchmark_gpu",
    testonly = True,
    srcs = ["msm_benchmark_gpu.cc"],
    deps = [
        ":msm_config",
        ":msm_runner",
        "//tachyon/c/math/elliptic_curves/bn/bn254:msm",
        "//tachyon/c/math/elliptic_curves/bn/bn254:msm_gpu",
    ],
)
