load(
    "//bazel:tachyon_cc.bzl",
    "tachyon_cc_binary",
    "tachyon_cc_library",
)

tachyon_cc_library(
    name = "poseidon2_config",
    testonly = True,
    srcs = ["poseidon2_config.cc"],
    hdrs = ["poseidon2_config.h"],
    deps = [
        "//benchmark:config",
        "//benchmark:field_type",
        "//tachyon/base/console",
    ],
)

tachyon_cc_library(
    name = "poseidon2_benchmark_runner",
    testonly = True,
    hdrs = ["poseidon2_benchmark_runner.h"],
    deps = [
        ":poseidon2_config",
        "//benchmark:simple_reporter",
        "//tachyon/base:logging",
        "//tachyon/base:profiler",
        "//tachyon/base/containers:container_util",
        "//tachyon/base/time",
        "//tachyon/c/base:type_traits_forward",
        "//tachyon/crypto/hashes/sponge/poseidon2",
        "//tachyon/crypto/hashes/sponge/poseidon2:poseidon2_horizen_external_matrix",
    ],
)

tachyon_cc_binary(
    name = "poseidon2_benchmark",
    testonly = True,
    srcs = ["poseidon2_benchmark.cc"],
    deps = [
        ":poseidon2_benchmark_runner",
        ":poseidon2_config",
        "//benchmark:simple_reporter",
        "//benchmark/poseidon2/horizen",
        "//benchmark/poseidon2/plonky3",
        "//tachyon/base/containers:contains",
        "//tachyon/c/math/elliptic_curves/bn/bn254:fr",
        "//tachyon/c/math/finite_fields/baby_bear",
        "//tachyon/crypto/hashes/sponge/poseidon2:poseidon2_params",
        "//tachyon/crypto/hashes/sponge/poseidon2/param_traits:poseidon2_baby_bear",
        "//tachyon/crypto/hashes/sponge/poseidon2/param_traits:poseidon2_bn254",
    ],
)
