load("//bazel:tachyon.bzl", "if_posix")
load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_cc_test")

package(default_visibility = ["//visibility:public"])

tachyon_cc_library(
    name = "compiler_specific",
    hdrs = ["compiler_specific.h"],
    deps = ["//tachyon/build:build_config"],
)

tachyon_cc_library(
    name = "cxx20_is_constant_evaluated",
    hdrs = ["cxx20_is_constant_evaluated.h"],
)

tachyon_cc_library(
    name = "environment",
    srcs = if_posix([
        "environment_posix.cc",
    ]),
    hdrs = ["environment.h"],
    deps = ["//tachyon:export"],
)

tachyon_cc_library(
    name = "functor_traits",
    hdrs = ["functor_traits.h"],
    deps = [
        ":type_list",
        "@com_google_absl//absl/meta:type_traits",
    ],
)

tachyon_cc_library(
    name = "logging",
    srcs = ["logging.cc"],
    hdrs = ["logging.h"],
    deps = [
        "//tachyon:export",
        "@com_github_google_glog//:glog",
    ],
)

tachyon_cc_library(
    name = "macro_utils",
    hdrs = ["macro_utils.h"],
    deps = ["//tachyon/build:build_config"],
)

tachyon_cc_library(
    name = "no_destructor",
    hdrs = ["no_destructor.h"],
)

tachyon_cc_library(
    name = "random",
    srcs = ["random.cc"],
    hdrs = ["random.h"],
    deps = [
        "//tachyon:export",
        "@com_google_absl//absl/random",
    ],
)

tachyon_cc_library(
    name = "static_storage",
    hdrs = ["static_storage.h"],
    deps = [":no_destructor"],
)

tachyon_cc_library(
    name = "template_util",
    hdrs = ["template_util.h"],
)

tachyon_cc_library(
    name = "type_list",
    hdrs = ["type_list.h"],
)

tachyon_cc_test(
    name = "base_unittests",
    srcs = [
        "cxx20_is_constant_evaluated_unittest.cc",
        "environment_unittest.cc",
        "macro_utils_unittest.cc",
        "random_unittest.cc",
    ],
    deps = [
        ":cxx20_is_constant_evaluated",
        ":environment",
        ":macro_utils",
        ":random",
        "//tachyon/base/containers:cxx20_erase",
    ],
)
